--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ set(VERSION "0.0")
 add_custom_target(${CMAKE_PROJECT_NAME}_version
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMENT "Generate time/data and git"
-    COMMAND ${CMAKE_COMMAND} -DVERSION=${VERSION} -DPATH_LD=${CMAKE_CURRENT_BINARY_DIR} -P "cmake/version.cmake"
+    COMMAND ${CMAKE_COMMAND} -DVERSION=${VERSION} -DPATH_LD=${CMAKE_CURRENT_BINARY_DIR} -DPROJECTNAME={CMAKE_PROJECT_NAME} -P "cmake/version.cmake"
 )
 
 add_dependencies(${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_NAME}_version)
